# fluorescence-brightness-tracker

./: .gitignore  CONTRIBUTING.md  JOSS_CHECKLIST.md  LICENSE  QUICK_START.md  README.md  SUBMISSION_GUIDE.md  SUMMARY.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: tests.yml
examples/: basic_tracking.py  demo_comparison.py  download_datasets.py  validate_bbbc046.py  validate_enhanced.py  validate_with_public_data.py
src/fluotrack/: __init__.py  analysis.py  app.py  enhanced_tracker.py  tracker.py  tracker_enhanced.py
tests/: __init__.py  test_analysis.py  test_tracker.py
